--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "^5.0.0"
   },
   "dependencies": {
-    "glob": "7.0.3"
+    "glob": "7.0.3",
+    "ramda": "^0.19.1"
   },
   "devDependencies": {
     "babel-preset-es2015-node5": "^1.1.1",
