--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "./build",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "removeComments": false,
     "declaration": true,
@@ -11,6 +11,6 @@
   },
   "files": [
     "src/index.ts",
-    "typings/tsd.d.ts"
+    "typings/main.d.ts"
   ]
 }
